k8s/dvr/overlays/rutorrent/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: app
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - /usr/local/bin/healthcheck
            initialDelaySeconds: 600
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
            - name: xmlrpc
              containerPort: 8000
            - name: rtorrent
              containerPort: 51413
            - name: dht
              containerPort: 6881
          volumeMounts:
            # - name: downloads
            #   mountPath: /data/
            #   subPath: config/rtorrent-config
            - name: downloads
              mountPath: /downloads/
            - name: config
              mountPath: /data/
              subPath: rtorrent-config
