k8s/dvr/overlays/rutorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rutorrent-deployment
  namespace: dvr
  labels:
    app: rutorrent
    argocd.argoproj.io/instance: rutorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rutorrent
  template:
    metadata:
      labels:
        app: rutorrent
    spec:
      containers:
        - name: rutorrent
          image: ghcr.io/crazy-max/rtorrent-rutorrent:latest@sha256:b8727db2833036ca72a0335f113ad9ebfb0bb50a618ead000df7e0d829ef662d
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - /usr/local/bin/healthcheck
            initialDelaySeconds: 600
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
            - name: xmlrpc
              containerPort: 8000
            - name: rtorrent
              containerPort: 51413
            - name: dht
              containerPort: 6881
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /data
              subPath: rtorrent-config
            - name: temporary-rundir
              mountPath: /var/run/rtorrent
        - name: flood
          image: jesec/flood:latest@sha256:e9c8a3fd460ad1e81b47e7e17ec257a998f4e92e2b8c4935190d63c28e5b9b50
          args: ["--allowedpath", "/data", "--allowedpath", "/var/run/rtorrent"]
          securityContext:
            runAsUser: 911
            runAsGroup: 911
          ports:
            - containerPort: 3000
              name: http-flood
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data
              subPath: rtorrent-config
            - name: temporary-rundir
              mountPath: /var/run/rtorrent
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /config
            type: DirectoryOrCreate
        - name: temporary-rundir
          emptyDir: {}
