k8s/dvr/overlays/rutorrent/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.178.252
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: scgi
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
