k8s/dvr/overlays/rutorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rutorrent-ingress
  namespace: dvr
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
  labels:
    app: rutorrent
spec:
  ingressClassName: nginx
  rules:
    - host: rutorrent.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rutorrent-service
                port:
                  name: http
  tls:
    - hosts:
        - rutorrent.k8s.javydekoning.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood-ingress
  namespace: dvr
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
  labels:
    app: rutorrent
spec:
  ingressClassName: nginx
  rules:
    - host: flood.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rutorrent-service
                port:
                  name: http-flood
  tls:
    - hosts:
        - flood.k8s.javydekoning.com
---
